[package]
name = "ark-starknet-curve"
version.workspace = true
authors.workspace = true
description = "The Starknet curve"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ark-starknet-curve/"
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-r1cs-std = { workspace = true, optional = true }
ark-std = { workspace = true }

[dev-dependencies]
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-algebra-test-templates = { workspace = true }
ark-algebra-bench-templates = { workspace = true }
ark-curve-constraint-tests = { path = "../curve-constraint-tests" }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]
r1cs = [ "ark-r1cs-std" ]
asm = [ "ark-ff/asm" ]

[[bench]]
name = "starknet"
path = "benches/starknet.rs"
harness = false